# suvadu

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  build.rs  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release_linux.yml  release_mac.yml
scripts/: install.sh  uninstall.sh
src/: agent.rs  agent_ui.rs  cli.rs  config.rs  db.rs  hooks.rs  import_export.rs  integrations.rs  lib.rs  main.rs  models.rs  redact.rs  repository.rs  risk.rs  search.rs  settings_ui.rs  stats_ui.rs  suggest.rs  suggest_ui.rs  test_utils.rs  theme.rs  update.rs  util.rs
src/agent_ui/: dashboard.rs  mod.rs  stats.rs
src/commands/: alias.rs  entry.rs  mod.rs  replay.rs  search.rs  session.rs  settings.rs  stats.rs  tag.rs  wrap.rs
src/repository/: aliases.rs  api.rs  bookmarks.rs  entries.rs  mod.rs  notes.rs  stats.rs  tags.rs  tests.rs
src/search/: data.rs  format.rs  input.rs  mod.rs  render.rs  tests.rs
src/session_ui/: mod.rs  picker.rs  timeline.rs
src/util/: cleanup.rs  exclusion.rs  file.rs  format.rs  highlight.rs  mod.rs  terminal.rs  timestamp.rs
tests/: integration.rs
