[package]
name = "suvadu"
default-run = "suv"
version = "0.0.2"
edition = "2021"
description = "Total recall for your terminal. A database-backed shell history with fuzzy search."
license = "MIT"
homepage = "https://www.appachi.tech/suvadu"
repository = "https://github.com/AppachiTech/suvadu"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["shell", "history", "tui", "ai", "cli"]

[[bin]]
name = "suv"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
directories = "5.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
hostname = "0.4"
ratatui = "0.29"
crossterm = "0.28"
arboard = "3.6.1"
regex = "1.12.2"
nucleo-matcher = "0.3"
clap_complete = "4"
clap_mangen = "0.2"

[dev-dependencies]
tempfile = "3.8"

[build-dependencies]
chrono = "0.4"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
multiple_crate_versions = "allow"

[lints.rust]
unsafe_code = "warn"
